--- a/Pulse/app/build.gradle
+++ b/Pulse/app/build.gradle
@@ -29,7 +29,9 @@ dependencies {
     compile 'com.android.support:design:26.0.0'
     compile 'com.android.support:support-vector-drawable:26.0.0'
     compile 'com.androidplot:androidplot-core:1.4.3'
+    compile 'com.github.lzyzsd:circleprogress:1.2.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'com.android.support:support-v4:26.+'
     testCompile 'junit:junit:4.12'
     compile project(':OpenCV')
 }
